fix: wrap texts in paragraphs in blocks (#2)
* fix: wrap texts in paragraphs in blocks

Texts that are a single paragraph are not wrapped in  in block cells. This is a known issue and has yet to be fixed in the pipeline. It is semantically correct to wrap text in a .

* feat: also wrap pictures in p

* fix: dont wrap empty cells

* fix: cover icons as well

* fix: update logic to detect inline els

* fix: firstChild undefined

--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -16,6 +16,10 @@
   margin: 16px;
 }
 
+.cards .cards-card-image p {
+  margin: 0;
+}
+
 .cards .cards-card-image {
   line-height: 0;
 }
